fixed logo stretch #3

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,12 +80,8 @@ a:hover {
   align-items: flex-end;
 }
 
-img {
-  width: 100%;
-}
-
 .logo > a > img {
-  max-height: 100px;
+  height: 85px;
   padding-top: 1rem;
 }
 
